# ollama-haskell

./: .gitignore  CHANGELOG.md  Doc.md  LICENSE  README.md  default.nix  fourmolu.yaml  makefile  ollama-haskell.cabal  package.yaml  stack-lts-19.33.yaml  stack-lts-20.26.yaml  stack-lts-21.25.yaml  stack-lts-22.43.yaml  stack-lts-23.19.yaml  stack.yaml
.github/workflows/: haskell.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: ollama-haskell-0.1.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.6.6/: ollama-haskell-0.1.0.0-inplace.conf  package.cache
examples/: OllamaExamples.hs
examples/ollama-example/: CHANGELOG.md  LICENSE  README.md  knowledge_base.json  ollama-example.cabal  package.yaml  stack.yaml
examples/ollama-example/app/: Main.hs
examples/ollama-example/src/Example/: ChatConversation.hs  ChatStructuredOutput.hs  ChatStructuredOutputImage.hs  ChatWithImage.hs  ChatWithToolCall.hs  Embeddings.hs  GenerateStream.hs  GenerateThinking.hs  GenerateWithConfig.hs  GenerateWithModelOptions.hs  KnowledgeApp.hs  List.hs  SimpleChat.hs  SimpleGenerate.hs
src/: Lib.hs  Ollama.hs  OllamaExamples.hs
src/Data/Ollama/: Chat.hs  Conversation.hs  Copy.hs  Create.hs  Delete.hs  Embeddings.hs  Generate.hs  List.hs  Load.hs  Ps.hs  Pull.hs  Push.hs  Show.hs
src/Data/Ollama/Common/: Config.hs  Error.hs  SchemaBuilder.hs  Types.hs  Utils.hs
test/: Main.hs
test/Test/Ollama/: Chat.hs  Embedding.hs  Generate.hs  Show.hs
